#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(p2c, 1.0.0, daisu-mi@nc.u-tokyo.ac.jp)
AM_INIT_AUTOMAKE($PACKAGE_NAME, $PACKAGE_VERSION)
AC_CONFIG_SRCDIR([src/read_pcap.c])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
#AC_PROG_CC
AM_PROG_CC_C_O
AC_PROG_INSTALL
AC_PROG_RANLIB

# Checks for libraries.
AC_HAVE_LIBRARY(pcap,
  ,
  [AC_MSG_ERROR([Cannot find PCAP: do you have the PCAP development packages installed?])])

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([arpa/inet.h fcntl.h netdb.h netinet/in.h stdlib.h string.h sys/socket.h sys/time.h sys/un.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_UINT32_T

# Checks for library functions.
AC_CHECK_FUNCS([memset socket])

AC_CONFIG_FILES([Makefile
								 src/Makefile])
AC_OUTPUT
